--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,17 +1,15 @@
 :root {
-  --gold: #ffd873;
-  --green: #10c06d;
-  --yellow-deep: #f9a825;
+  --primary-gold: #ffd873;
+  --primary-green: #10c06d;
+  --deep-blue: #152144;
   --text-primary: #002058;
+  --grey: #b3b3b3;
   --text-dark: #041942;
   --text-input: #b2b7bc;
+  --deep-gold: #f9a825;
   --fade: #f5f5f5;
-  --grey: #b3b3b3;
-  --dark-blue: #152144;
-  --alert: #f8d7da;
-  --alert-color: #721c24;
-  --alert-border: #f5c6cb;
   --white: #fff;
+  --fade-border: #e3e6ea;
   --full: 100%;
   --radius: 2px;
   --wrapper-max-width: 1680px;
