--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,8 +10,10 @@
   --fade: #f5f5f5;
   --white: #fff;
   --fade-border: #e3e6ea;
+  --main-bg: #e5e5e5;
   --full: 100%;
   --radius: 2px;
+  --nav-width: 294px;
   --wrapper-max-width: 1680px;
   --wrapper-min-width: 240px;
 }
