--- a/src/layout/dashboardLayout/styles.scss
+++ b/src/layout/dashboardLayout/styles.scss
@@ -7,9 +7,42 @@
   min-width: var(--wrapper-min-width);
   margin: 0 auto;
 
+  .hamburger-wrapper {
+    background: var(--white);
+    width: var(--full);
+    display: flex;
+    justify-content: flex-end;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 220;
+    height: 55px;
+    padding-right: 25px;
+
+    @media (min-width: 1272px) {
+      display: none;
+    }
+
+    .hamburger {
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 0;
+      width: fit-content;
+    }
+  }
+
   > .main {
     margin-left: var(--nav-width);
     min-height: 100vh;
     padding-left: 36px;
+
+    @media (max-width: 1271px) {
+      width: var(--full);
+      margin-left: 0;
+      padding-left: 0;
+      margin-top: 55px;
+    }
   }
 }
