--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,8 +6,10 @@
   --grey: #b3b3b3;
   --text-dark: #041942;
   --text-input: #b2b7bc;
+  --dark-fade: #898d92;
   --deep-gold: #f9a825;
   --fade: #f5f5f5;
+  --orange: #f2944a;
   --white: #fff;
   --fade-border: #e3e6ea;
   --main-bg: #e5e5e5;
